--- a/Shock/Views/Base.lproj/Main.storyboard
+++ b/Shock/Views/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wAQ-HA-4dQ">
-    <device id="retina6_5" orientation="portrait" appearance="dark"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
@@ -11,13 +11,13 @@
         <!--Karte-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Shock" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="defiMap" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="Shock" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Z3C-g6-gqV">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </mapView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5UG-cB-Fiy">
                                 <rect key="frame" x="353" y="744" width="45" height="45"/>
@@ -44,16 +44,17 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Z3C-g6-gqV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2bV-Ce-G2C"/>
-                            <constraint firstItem="Z3C-g6-gqV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Awt-u7-IXO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5UG-cB-Fiy" secondAttribute="trailing" constant="16" id="Ezb-FW-UsW"/>
+                            <constraint firstItem="Z3C-g6-gqV" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="Utm-ox-ij1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5UG-cB-Fiy" secondAttribute="bottom" constant="24" id="hBe-WQ-d2l"/>
-                            <constraint firstItem="Z3C-g6-gqV" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="nmm-nt-wod"/>
-                            <constraint firstItem="Z3C-g6-gqV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wVP-tc-1Hh"/>
+                            <constraint firstItem="Z3C-g6-gqV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="oAa-n4-x9f"/>
+                            <constraint firstItem="Z3C-g6-gqV" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="oZY-UM-q1k"/>
+                            <constraint firstItem="Z3C-g6-gqV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="yAK-xY-uMg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Karte" image="flashIcon" id="hTI-nM-JJQ"/>
+                    <navigationItem key="navigationItem" id="21y-Aa-WpC"/>
                     <connections>
                         <outlet property="defiMap" destination="Z3C-g6-gqV" id="8EP-TY-VMB"/>
                         <outlet property="trackingButtonPlaceholder" destination="5UG-cB-Fiy" id="fFG-MF-8FS"/>
@@ -66,7 +67,7 @@
         <!--Reanimation-->
         <scene sceneID="yQk-Bc-M6Q">
             <objects>
-                <tableViewController id="Obo-Ml-X2e" customClass="CPRInstructions" customModule="Shock" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="reanimationView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Obo-Ml-X2e" customClass="CPRInstructions" customModule="Shock" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="n8N-TQ-uy4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -492,7 +493,7 @@ Grundsätzlich gilt: Jede Hilfe ist besser als keine Hilfe!</string>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OIg-2w-4Uw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="757.97101449275374" y="804.91071428571422"/>
+            <point key="canvasLocation" x="-161" y="779"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="f6C-gm-UYn">
@@ -533,7 +534,7 @@ Grundsätzlich gilt: Jede Hilfe ist besser als keine Hilfe!</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fwz-5g-yPg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-159" y="805"/>
+            <point key="canvasLocation" x="-1039" y="779"/>
         </scene>
     </scenes>
     <resources>
